--- a/kandi/malli.tex
+++ b/kandi/malli.tex
@@ -32,6 +32,10 @@
 \usepackage{amsfonts,amsmath,amssymb,amsthm,booktabs,color,enumitem,graphicx}
 \usepackage[pdftex,hidelinks]{hyperref}
 
+\usepackage{amsmath}
+\numberwithin{table}{section}
+
+
 \usepackage[sort]{natbib} %uncomment for a harvard-style
 %\usepackage[square,sort,comma,numbers]{natbib}
 
@@ -386,21 +390,23 @@ Tietenkin olisi mahdollista laskea jokaiselle luokalle erikseen kyseiset mittari
 
 \section{Testattavuus arkkitehtuurisella tasolla} \label{arch_testability_main}
 
-Arkkitehtuurisella tasolla testattavuus vaikuttaa laajemmin ja arkkitehtuuristen ongelmien tutkimiseen on käytettävä eri keinoja, kuin kooditason analysoinnissa. Testattavuutta voidaan tutkia esimerkiksi komponenttitasolla, jota tukevat hyvin UML-komponenttikaaviot. Tämä käy arkkitehtuurin arvioimiseen testattavuuden kannalta hyvin, koska testattavuus tulee ilmi korkealla tasolla muunmuassa integraatiotestauksen aikana, kun sekä komponenttien rajapintojen toimivuus että komponenttien toimivuus pitää validoida \citep[s. 65]{Eickelmann:1996:MOS:243327.243602}. Toinen tapa on tutkia testattavuutta UML-luokkakaavioiden avulla, joiden avulla päästään tarkastelemaan tiettyä metriikoita, jotka muuten eivät näkyisi komponenttitasolla. UML-luokkakaavioiden avulla voidaan käyttää hyväksi esimerkiksi kaikkia kappaleen \ref{testability_measure} metriikoita, jotka eivät tarvitse lähdekoodia tuekseen. 
+Arkkitehtuurisella tasolla testattavuus vaikuttaa laajemmin ja arkkitehtuuristen ongelmien tutkimiseen on käytettävä eri keinoja, kuin kooditason analysoinnissa, koska lähdekoodia ei aina ole saatavilla. Testattavuutta voidaan tutkia esimerkiksi komponenttitasolla, jota tukevat hyvin UML-komponenttikaaviot. Tämä käy arkkitehtuurin arvioimiseen testattavuuden kannalta hyvin, koska testattavuus tulee ilmi korkealla tasolla muunmuassa integraatiotestauksen aikana, kun sekä komponenttien rajapintojen toimivuus että komponenttien toimivuus pitää validoida \citep[s. 65]{Eickelmann:1996:MOS:243327.243602}. Toinen tapa tutkia testattavuutta arkkitehtuurisella tasolla on UML-luokkakaavioiden avulla. Niiden apuna voidaan käyttää hyväksi esimerkiksi kaikkia kappaleen \ref{testability_measure} metriikoita, jotka eivät tarvitse lähdekoodia tuekseen. 
 
 Yksittäisten komponenttien, eli luokista koostuvien kokonaisuuksien testattavuutta, on analysoitu erilaisten mallien avulla ja näistä eräs on Goan ja Shihn \citep{gao_component_2005} esittämä pentagrammimalli. Sen avulla jokaista komponenttia voidaan tarkastella viideltä eri näkökulmalta: havaittavuus, hallittavuus, jäljitettävyys (traceability), tuki testivalmiudelle (test support capability) ja ymmärrettävyys (understandability). Näistä kaksi ensimmäistä ovat ideoiltaan samat kuin kappaleessa \ref{contro_and_observ} ja loput vastaavat muunmuassa kysymyksiin: kuinka helppoa on tarkastella komponentin tilaa ulkopuolisena; kuinka hyvin komponentti tukee erilaisia testausstrategioita; kuinka hyvin komponentin tarkoitus ymmärretään, että testejä pystytään luomaan. 
  
+On siis hyvä tarkastella kahdelta eri näkökulmalta testattavuutta arkkitehtuurisella tasolla: metriikoista koostuva analyysi ja yksittäisten komponenttien analyysi ilman metriikoita. Analyysi ilman metriikoita keskitetään enemmän kokonaisuuksien hahmottamiseen ja ongelmakohtien löytämiseen laadullisten ominaisuuksien pohjalta.
+
 
 \subsection{Hyvä testattavuus arkkitehtuurissa} \label{good_testability}
 
  
 Eicklemann on määritellyt tiettyjen arkkitehtuuristen tyylien sopivan tietyille testausstrategioille \citep{Eickelmann:1996:MOS:243327.243602}, joten on selvää että valittu arkkitehtuurinen tyyli vaikuttaa jollain tasolla positiivisesti testattavuuteen. Paljon mielekkäämpää on kuitenkin tarkastella muita ominaisuuksia testattavalle arkkitehtuurille, jotta voitaisiin tarkastella enemmän, että mitkä tekijät tuovat testattavuutta arkkitehtuurille.
 
-Järjestelmän tarkasteltavuus (monitorability) on yksi laajalti vaikuttava ominaisuus, ja se nostaa positiivisesti testattavuudenkin tasoa \citep{mari_impact_2003}. Tarkasteltavuus ohjelmistojärjestelmissä voidaan jakaa kolmeen eri luokkaan: komponentin sisäinen, komponenttien välinen sekä järjestelmätasoinen yhteistoiminnallisuus. Tarkasteltavuutta analysoitaessa huomio voidaan kiinnittää esimerkiksi siihen kuinka hyvin järjestelmän tilaa voidaan tarkastella, testien etenemistä, komponenttien interaktiota sekä testauksen hallinnoimista esimerkiksi tynkäluokkien (stub) avulla. 
+Oliopohjaisissa ohjelmistojärjestelmissä koetaan vähintään vastuiden jakamisen olevan  lähtökohta hyvälle testattavuudelle, koska se parantaa koko järjestelmän havaittavuutta ja hallittavuutta \citep{Binder:1994:DTO:182987.184077}. Binder määrittelee myös muita ominaisuuksia testattavalle järjestelmälle, kuten sisäänrakennettu testausominaisuus (built-in test) ja järjestelmän jäljitettävyys, jonka avulla testien esille tuomat viat on helppo paikallistaa. Suoraan rakenteelliselta tasolta hän painottaa kapseloinnin, polymorfismin, perinnän ja kompleksisuuden tarkastelua.
 
-Oliopohjaisissa ohjelmistojärjestelmissä koetaan vastuiden jakamisen olevan  lähtökohta hyvälle testattavuudelle, koska se parantaa koko järjestelmän havaittavuutta ja hallittavuutta \citep{Binder:1994:DTO:182987.184077}. Binder määrittelee myös muita ominaisuuksia testattavalle järjestelmälle, kuten sisäänrakennettu testausominaisuus (built-in test) ja järjestelmän jäljitettävyys, jonka avulla testien esille tuomat viat on helppo paikallistaa. Rakenteelliselta tasolta hän painottaa kapseloinnin, polymorfismin, perinnän ja kompleksisuuden tarkastelua.
+%Järjestelmän tarkasteltavuus (monitorability) voidaan lukea ohjelmistojärjestelmän yhdeksi ominaisuudeksi, joka nostaa positiivisesti testattavuuden tasoa \citep{mari_impact_2003}. Tarkasteltavuus ohjelmistojärjestelmissä voidaan jakaa kolmeen eri luokkaan: komponentin sisäinen, komponenttien välinen sekä järjestelmätasoinen yhteistoiminnallisuus. Tarkasteltavuutta analysoitaessa huomio voidaan kiinnittää esimerkiksi siihen kuinka hyvin järjestelmän tilaa voidaan tarkastella, testien etenemistä, komponenttien interaktiota sekä testauksen hallinnoimista esimerkiksi tynkäluokkien (stub) avulla. 
 
-Joshi ja Sardana \citep{joshi_design_2014} tutkivat ominaisuuksia, joita järjestelmän pitäisi painottaa, jos järjestelmää halutaan suunnitella testauksen varalle eli luoda ohjelmistojärjestelmästä mahdollisimman testattava. Näitä testattavuuteen korkealla tasolla vaikuttavia ominaisuuksia järjestelmässä löydettiin olevan
+Joshi ja Sardana ovat tutkineet ominaisuuksia, joita järjestelmän pitäisi painottaa, jos järjestelmää halutaan suunnitella testauksen varalle eli luoda ohjelmistojärjestelmästä mahdollisimman testattava. Näitä testattavuuteen korkealla tasolla vaikuttavia ominaisuuksia järjestelmässä löydettiin olevan \citep{joshi_design_2014}
 	
 \begin{itemize}
 	\item vaatimusten tarkkuus
@@ -412,12 +418,15 @@ Joshi ja Sardana \citep{joshi_design_2014} tutkivat ominaisuuksia, joita järjes
 	\item havaittavuus ja hallittavuus.
 \end{itemize}
 
-\noindent
-He esittävät mahdollisten ongelmien eliminoimiseen järjestelmän modulaarista rakennetta ja UML:n muokkaamista sekä UML-stereotyyppien käyttöä. UML kaavioiden muokkaus voi tapahtua esimerkiksi luomalla uusia malleja nykyisten pohjalta tai käyttämällä UML:n geneerisiä laajennoskohtia, joiden avulla saadaan muokattua näkymää tiettyyn suuntaan.
+%\noindent
+%He esittävät mahdollisten ongelmien eliminoimiseen järjestelmän modulaarista rakennetta ja UML:n muokkaamista sekä UML-stereotyyppien käyttöä. UML kaavioiden muokkaus voi tapahtua esimerkiksi luomalla uusia malleja nykyisten pohjalta tai käyttämällä UML:n geneerisiä laajennoskohtia, joiden avulla saadaan muokattua näkymää tiettyyn suuntaan.
+
+Edellä olevien tutkimusten tuloksista voidaan nähdä kaksi ryhmää; mitattavat ja laadulliset ominaisuudet. On tärkeää tarkastella sekä komponenttien ulkoisia että sisäisiä ominaisuuksia, jotta voitaisiin muodostaa hyvä kuva testattavuuden tasosta. Kuitenkin suoraan rakenteellisuuden näkökulmasta esiin nousevat: kapselointi, perintä, kompleksisuus, riippuvuudet, kytkentä ja koheesio.  
+
 
 \subsection{Arkkitehtuurin testattavuuden mittaaminen} \label{arch_testability_measurement}
 
-Bengtsson \citep{bengtsson1998towards} on määritellyt osan arkkitehtuurisen tason mittareita, jotka määrittelevät järjestelmän ylläpidettävyyttä. Ylläpidettävyys on taas vaikuttava piirre testattavuuteen, joten on luonnollista tarkastella myös sen kautta järjestelmän testattavuutta. Tunnistetut mittarit ovat arkkitehtuurisille elementeille 
+Bengtsson on määritellyt osan arkkitehtuurisen tason mittareita, jotka määrittelevät järjestelmän ylläpidettävyyttä. Ylläpidettävyys on taas vaikuttava piirre testattavuuteen, joten on luonnollista tarkastella myös sen kautta järjestelmän testattavuutta. Tunnistetut mittarit ovat arkkitehtuurisille elementeille \citep{bengtsson1998towards}
 
 \begin{itemize}
 	\item metodien määrä elementin rajapinnassa
@@ -429,16 +438,16 @@ Bengtsson \citep{bengtsson1998towards} on määritellyt osan arkkitehtuurisen ta
 	\item elementin metodien ja parametrien määrä
 \end{itemize}
 
-On melko selvää, että nämä mittarit ovat osittain hyvin samankaltaisia kuin kappaleessa \ref{testability_measure} määritellyt mittarit testattavuuden mittaamiseen, mutta osa niistä kattaa korkeamman tason, jossa vaikutukset näkyvät paremmin. Kyseisiä metriikoita voitaisiin havaita esimerkiksi muokatuista UML-komponenttimalleista ja ne toimivatkin enemmän yleispätevinä ohjeina komponenttien toteutuksille. Edellisistä mittareista nähdään myös, että moni pyrkii jossain määrin määrittelemään esimerkiksi kytkennän tasoa. Kytkentä määriteltiin kappaleessa \ref{testability_measure} yhdeksi tavaksi mitata testattavuutta ja sitä voidan havaita tutkimalla ohjelmistojärjestelmän komponenttien välisiä suhteita.
+On melko selvää, että nämä mittarit ovat osittain hyvin samankaltaisia kuin kappaleessa \ref{testability_measure} määritellyt mittarit testattavuuden mittaamiseen, mutta osa niistä kattaa korkeamman tason, jossa vaikutukset näkyvät paremmin. Edellisistä mittareista nähdään myös, että moni pyrkii jossain määrin määrittelemään esimerkiksi kytkennän tasoa. Kytkentä määriteltiin kappaleessa \ref{testability_measure} yhdeksi tavaksi mitata testattavuutta ja sitä voidan havaita tutkimalla ohjelmistojärjestelmän komponenttien välisiä suhteita.
 
 \subsubsection{UML-kaaviot testattavuuden mittaamisessa} \label{uml_arch_test}
 
 UML-luokkakaavio toimii hyvänä pohjana, kun halutaan mitata luokkien välisiä suhteita ja riippuvuuksia \citep{baudry_testability_2002}. 
-Baudry ym. määritteleekin testattavuuden anti-mallin (testability anti-pattern) juuri luokkakaavioiden avulla tulevaksi ilmiöksi \citep{baudry_measuring_2003}. Anti-mallissa kaksi suurta tekijää vaikuttavat testattavuuteen negatiivisesti: luokkien välinen suuri interaktio ja itsekäyttö, jossa luokka on riippuvainen rekursiivisesti itsestään. Syitä näiden kahden esiintymiselle voi olla luokkien välinen suuri kytkentätaso, riippuvuuksien syklimäisyys ja luokkien välinen suuri kommunikaatiotaso. Yhdessä nämä tekijät vaikeuttavat paljon vastuiden jakamista ja kasvattavat tarvittavien testitapausten määrää. 
+Baudry ym. määrittelee testattavuuden anti-mallin (testability anti-pattern) luokkakaavioiden avulla tulevaksi ilmiöksi \citep{baudry_measuring_2003}. Anti-mallissa kaksi suurta tekijää vaikuttavat testattavuuteen negatiivisesti: luokkien välinen suuri interaktio ja itsekäyttö, jossa luokka on riippuvainen rekursiivisesti itsestään. Syitä näiden kahden esiintymiselle voi olla luokkien välinen suuri kytkentätaso, riippuvuuksien syklimäisyys ja luokkien välinen suuri kommunikaatiotaso. Yhdessä nämä tekijät vaikeuttavat paljon vastuiden jakamista ja kasvattavat tarvittavien testitapausten määrää. 
 
 % UML \citep{baudry_testability_2002}
 
-UML:n avulla luotavalla erityisellä riippuvuusgraafilla, esittävät testattavuuteen negatiivisesti vaikuttaviksi asioiksi \citep{baudry_testability_2002}
+UML:n avulla luotavalla erityisellä riippuvuusgraafilla, esittävät Baudry, Troan ja Sunye testattavuuteen negatiivisesti vaikuttaviksi asioiksi \citep{baudry_testability_2002}
 
 \begin{itemize} 
 	\item kompleksiset perintäsuhteet
@@ -446,7 +455,7 @@ UML:n avulla luotavalla erityisellä riippuvuusgraafilla, esittävät testattavu
 \end{itemize}
 
 
-Näiden lisäksi Jungmayr \citep{Jungmayr:2002} käsittelee testauksen kannalta kriittisten riippuvuuksien poistoa. Riippuvuudeksi lasketaan mikä tahansa komponenttien välinen interaktio, jossa komponentti joutuu käyttämään toisen komponentin tarjoamia palveluita (usein metodeja) suorittaakseen toiminnallisuuttaan.  Luokkakaaviosta saatavia mittareita tunnistetaan kolme kappaletta, joiden korkeat arvot korreloivat järjestelmän huonon testattavuuden kanssa 
+Näiden lisäksi Jungmayr käsittelee testauksen kannalta kriittisten riippuvuuksien poistoa. Riippuvuudeksi lasketaan mikä tahansa komponenttien välinen interaktio, jossa komponentti joutuu käyttämään toisen komponentin tarjoamia palveluita (usein metodeja) suorittaakseen toiminnallisuuttaan.  Luokkakaaviosta saatavia mittareita tunnistetaan kolme kappaletta, joiden korkeat arvot korreloivat järjestelmän huonon testattavuuden kanssa \citep{Jungmayr:2002} 
 
 \begin{itemize}
 	\item komponenttien keskimääräinen riippuvuuksien määrä
@@ -454,13 +463,10 @@ Näiden lisäksi Jungmayr \citep{Jungmayr:2002} käsittelee testauksen kannalta 
 	\item \textit{feedback-riippuvuuksien\footnote{\textit{Feedback-riippuvuus} on syklinen riippuvuussuhde komponenttien välillä, josta poistamalla jokin riippuvuus saadaan sykli purettua täysin.}}  määrä 
 \end{itemize}
 
-
-%\subsection{Design for testability}
-
-%Järjestelmä voidaan suunnitella tukemaan hyvää testattavuutta \citep[s. 20]{Voas:1995:STN:624607.625469}. 
+UML on mittareiden mukaan auttanut työkaluna löytämään yhteydellisiä ominaisuuksia arkkitehtuurissa, joita tarkastellessa voidaan sanoa tarkasteltavan  kytkennän tasoa, kompleksisuutta ja riippuvuuksia. Komponenttien sekä yhteyksien tarkastelu oli myös luvussa \ref{ark} esitelty eräs näkemys ohjelmistoarkkitehtuuriin ja on järjestelmän todellisen testattavuuden määrittelemisen kannalta parempi, jos testattavuutta voidaan tarkastellaan korkealla tasolla. Liian tarkka kuvaus järjestelmästä vaikeuttaa todellisten ongelmien näkemistä, koska se vie aikaa ymmärtää ja keskittyy liian pikkutarkkoihin asioihin, jotka eivät kaikki välttämättä ole relevantteja testattavuuden analysoinnin kannalta. Ylätason kuvauksella on etuna myös se, että sen avulla pystytään löytämään helposti usein esiintyviä ongelmallisia tilanteita, joiden tunnistaminen ja välttäminen auttaa järjestelmän testattavuuden hallinnassa.
 
  
-UML on selvästi mahdollistanut testattavuuden arvioimisen ohjelmistojärjestelmissä, koska löydetyistä mittareista huomataan, että ne mittaavat esimerkiksi komponenttien ominaisuuksia ja yhteyksiä, jotka tulevat esille kunnolla vasta arkkitehtuurisella tasolla. Komponenttien sekä yhteyksien tarkastelu oli myös luvussa \ref{ark} esitelty eräs näkemys ohjelmistoarkkitehtuuriin ja on järjestelmän todellisen testattavuuden määrittelemisen kannalta parempi, jos testattavuutta voidaan tarkastellaan korkealla tasolla. Liian tarkka kuvaus järjestelmästä vaikeuttaa todellisten ongelmien näkemistä, koska se vie aikaa ymmärtää ja keskittyy liian pikkutarkkoihin asioihin, jotka eivät kaikki välttämättä ole relevantteja testattavuuden analysoinnin kannalta. Ylätason kuvauksella on etuna myös se, että sen avulla pystytään löytämään helposti usein esiintyviä ongelmallisia tilanteita, joiden tunnistaminen ja välttäminen auttaa järjestelmän testattavuuden hallinnassa.
+%UML on mahdollistanut testattavuuden arvioimisen ohjelmistojärjestelmissä, koska löydetyistä mittareista huomataan, että ne mittaavat esimerkiksi komponenttien ominaisuuksia ja yhteyksiä, jotka tulevat esille kunnolla vasta arkkitehtuurisella tasolla. Komponenttien sekä yhteyksien tarkastelu oli myös luvussa \ref{ark} esitelty eräs näkemys ohjelmistoarkkitehtuuriin ja on järjestelmän todellisen testattavuuden määrittelemisen kannalta parempi, jos testattavuutta voidaan tarkastellaan korkealla tasolla. Liian tarkka kuvaus järjestelmästä vaikeuttaa todellisten ongelmien näkemistä, koska se vie aikaa ymmärtää ja keskittyy liian pikkutarkkoihin asioihin, jotka eivät kaikki välttämättä ole relevantteja testattavuuden analysoinnin kannalta. Ylätason kuvauksella on etuna myös se, että sen avulla pystytään löytämään helposti usein esiintyviä ongelmallisia tilanteita, joiden tunnistaminen ja välttäminen auttaa järjestelmän testattavuuden hallinnassa.
 
 \subsection{Arkkitehtuuriset hajut ja testattavuus} \label{arch_smells_and_testability}
 
@@ -487,24 +493,23 @@ Yleisesti arkkitehtuuriin vaikuttavia hajuja voidaan löytää arkkitehtuurisell
 %\citep{HotSpot} arkkitehtuuriset hajut "hotspotit"\ 5kpl + kaikista altin virheille oli \citep[s. 57]{HotSpot} Unstable Interface \& Cross-Module Cycle.
 
 \noindent
-Näiden metriikoiden avulla sekä näkymällä moduulitasoon, olisi esimerkiksi hyvin mahdollistaa löytää yksi virhealttiillisin arkkitehtuurista löytyvä ongelmakohta \citep[s. 57]{HotSpot} \textit{Cross-Module Cycle}. \textit{Cross-Module Cycle} tilanne on arkkitehtuurissa, jos on olemassa syklinen riippuvuussuhde moduulitasolla. Se vaikeuttaa testattavuutta, siten, että testauksen aikana yhden moduulin testaaminen vaatii käytännössä myös kaikkien muiden moduulien testauksen, jolloin testitapausten eriyttäminen vaikeutuu huomattavasti. Sykliset riippuvuudet todettiin olevan myös kappaleessa \ref{good_testability} yksi testattavuuteen vaikuttava tekijä.
+Näiden metriikoiden avulla sekä näkymällä moduulitasoon, olisi esimerkiksi hyvin mahdollistaa löytää yksi virhealttiillisin arkkitehtuurista löytyvä ongelmakohta \citep[s. 57]{HotSpot} \textit{Cross-Module Cycle}.
 
+\paragraph{\textit{Cross-Module Cycle}} tilanne arkkitehtuurissa, jossa on olemassa syklinen riippuvuussuhde moduulitasolla. Se vaikeuttaa testattavuutta, siten, että testauksen aikana yhden moduulin testaaminen vaatii käytännössä myös kaikkien muiden moduulien testauksen, jolloin testitapausten eriyttäminen vaikeutuu huomattavasti. Sykliset riippuvuudet todettiin olevan myös kappaleessa \ref{good_testability} yksi testattavuuteen vaikuttava tekijä.
+\\
 
 Arkkitehtuurisia hajuja, jotka vaikuttavat suoraan testattavuuteen voidaan tunnistaa olevan ainakin kaksi \citep{garcia_identifying_2009}
-
-\noindent
 \paragraph{\textit{Connector Envy}} tilanne, jossa komponentti toteuttaa konnektorille kuuluvaa toiminnallisuutta eli toteuttaa esimerkiksi joko kommunikointia, koordinointia tai tiedon konversiota. Nämä tulisi jättää konnektorin toteutettavaksi, koska komponentin toiminnallisuus ja interaktiot eivät ole enää erillään testattavia ominaisuuksia ja tilanteena johtaa siihen, että ei pystytä enää varmasti sanomaan, että mikä kohta komponentissa oli virheellinen, jos se testauksen aikana tuli esille.
 
 \paragraph{\textit{Scattered Parasitic Functionality}} tilanne, jossa useammalla komponentilla on sama vastuu ja ne ovat vastuussa myös jostain muusta vastuusta. Testattavuus kärsii tästä, koska esimerkiksi integraatiotestauksen aikana tapahtunut virhe vaikuttaa laajalla alueella ja vaikeuttaa vian alkuperän määrittämistä. 
 
 \noindent
-\\Näistä kahdesta arkkitehtuurisesta hajusta voidaan huomata, että ne pyrkivät löytämään sekä huonon koheesion että mahdollisen riippuvuuksien jakautumisen turhan laajalle.
+\\Testaukseen vaikuttavista arkkitehtuurisista hajusta voidaan huomata, että ne pyrkivät löytämään sykliset riippuvuudet, huonon koheesion ja mahdollisen riippuvuuksien jakautumisen turhan laajalle. Samat asiat siis, jotka vaikuttavat luokkatasolla vaikuttavat myös jollain keinolla arkkitehtuuriin. Tämän kannalta on hyvä yrittää löytää, että onko luokkatasoisemmilla koodihajuilla ja arkkitehtuurisilla hajuilla jotain yhtettä toisiinsa. 
 
 
 \subsubsection{Koodihajujen ja arkkitehtuuristen hajujen suhde}
 
-
-Vaikka arkkitehtuurisia hajuja on löydetty testattavuuden kannalta muutamia, niin niiden tunnistamiselle ei ole annettu yhtä oikeaa ratkaisua.  Vale ym. ovat myös tutkimuksessaan tuoneet esille muunmuassa hybridihajut, jotka ovat sekoitus koodihajuja ja arkkitehtuurisia hajuja tuoden uuden näkökulman arkkitehtuuristen hajujen löytämiseksi. Koodipoikkeama (code anomaly) luetaan hybridihajuksi, jos \citep{vale_bad_2014}
+Vale ym. ovat myös tutkimuksessaan tuoneet esille hybridihajut, jotka ovat sekoitus koodihajuja ja arkkitehtuurisia hajuja tuoden uuden näkökulman arkkitehtuuristen hajujen löytämiseksi myös testattavuuden kannalta. Koodipoikkeama (code anomaly) luetaan hybridihajuksi, jos \citep{vale_bad_2014}
 
 \begin{itemize}
 	\item sen vaikuttamat luokat ovat vastuussa arkkitehtuurisista elementeistä
@@ -512,10 +517,11 @@ Vaikka arkkitehtuurisia hajuja on löydetty testattavuuden kannalta muutamia, ni
 \end{itemize}
 
 \noindent
-Hybridihajujen tunnistaminen saattaa helpottaa arkkitehtuuristen hajujen löytämistä. Löytämällä esimerkiksi koodihajujen pohjalta arkkitehtuurisiin vaikuttavia ongelmallisia luokkia, voidaan tunnistaa arkkitehtuurisella tasolla vastaavat arkkitehtuuriset hajut ja elementit.
+Hybridihajujen tunnistaminen saattaa siis helpottaa arkkitehtuuristen hajujen löytämistä. Löytämällä esimerkiksi koodihajujen pohjalta arkkitehtuurisiin vaikuttavia ongelmallisia luokkia, voidaan tunnistaa arkkitehtuurisella tasolla vastaavat arkkitehtuuriset hajut ja elementit.
 
 Lisää arkkitehtuuristen sekä koodihajujen yhteyksistä on tutkinut Macia ym. \citep{macia_impact_2011}. He löysivät, että tietyt koodihajut ovat indikaattoreita arkkitehtuurisista hajuista. Kahteen aiemmin mainittuun testattavuutta huonontaviin hajuihin he lukivat seuraavat vastaavat koodihajut aspekti-orientoituneissa järjestelmissä
 
+% EI SELITTÄMÄTTÖMIÄ OSIA
 
 \begin{center}
 \begin{table}[ht]
@@ -538,6 +544,8 @@ Lisää arkkitehtuuristen sekä koodihajujen yhteyksistä on tutkinut Macia ym. 
 \noindent
 Vaikka taulukon \ref{tab:aspectSmells} koodihajut eivät suoraan koske juuri olio-pohjaisia järjestelmiä, niistä voidaan silti nähdä, että ongelmat tulevat liiallisista vastuista, liiallisista riippuvuuksista ja samankaltaisesta toiminnallisuudesta. Nämä ominaisuudet ovat nähtävissä hyvin tavallisissakin olio-pohjaisissa järjestelmissä ja tätä faktaa tukee Macia ym. jatkotutkimus hieman samasta aiheesta, jossa tutkittiin arkkitehtuuri-herkkiä koodipoikkeamia \citep{macia_enhancing_2013}. He tulivat testattavuuden kannalta seuraaviin päätelmiin
 
+% NÄÄ VOIS SELITTÄÄ ESIM ALAINDEKSISSÄ
+
 \begin{center}
 \begin{table}[h]
 	\begin{tabular}{| l | l | m{3.5cm} |}
@@ -557,7 +565,9 @@ Taulukon \ref{tab:codeSmells} suhteista nähdään samanlaisuutta, kuin mitä ta
 
 %Koodihajujen tunnistaminen arkkitehtuurisen degraation tunnistamiseksi \citep{fontana_towards_2015}. Vaikuttavat ylläpidettävyyteen. God Class, Data Class, Brain Method, Shotgun Surgery, Dispersed Coupling, Message Chains. Metriikoina käytettiin muunmuassa: Tight Class Cohesion, Access to Foreign Data, Number of Public Attributes, Maximum Nesting Level, Coupling Intensity. Co-Occurence of smells. 
 
-Tarkastelu voidaan keskittää myös enemmän aiheisiin kuten mistä koodihajut johtuvat tai mitkä tekijät koodihajuissa vaikuttavat arkkitehtuuristen hajujen esiintymiseen järjestelmissä. Tähän avuksi Fontana ym. loivat erityisen näkymän koodihajujen tunnistamiseksi ja tunnistivat kytkentään ja koheesioon vaikuttavia koodihajuja \citep{fontana_towards_2015}. Kytkentään vaikuttivat koodihajut, jotka olivat suoraan vastuussa muunmuassa
+Tarkastelu voidaan keskittää myös enemmän aiheisiin kuten mistä koodihajut johtuvat tai mitkä tekijät koodihajuissa vaikuttavat arkkitehtuuristen hajujen esiintymiseen järjestelmissä. Tähän avuksi Fontana, Ferme ja Zanoni loivat erityisen näkymän koodihajujen tunnistamiseksi ja tunnistivat kytkentään ja koheesioon vaikuttavia koodihajuja \citep{fontana_towards_2015}. Kytkentään vaikuttivat koodihajut, jotka olivat suoraan vastuussa muunmuassa
+
+% SELITÄ TAI POISTA
 
 \begin{itemize}
 	\item suurista luokista (\textit{God Class})
